Removed failed attempted fixes for modals on safari

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,14 +1,5 @@
 /* Generic custom styles here */
 
-.modal-backdrop {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: #000000;
-}
-
 .content {
     margin-top: 70px;
 }
